@@ -197,6 +197,7 @@ S3method(linearHypothesis, mer)
 S3method(linearHypothesis, mlm)
 S3method(linearHypothesis, polr)
 S3method(linearHypothesis, svyglm)
+S3method(linearHypothesis, nlsList)
 S3method(Manova, mlm)
 S3method(matchCoefs, default)
 S3method(matchCoefs, lme)
